--- a/manage-videos.html
+++ b/manage-videos.html
@@ -70,12 +70,17 @@
                          </select>
                      </div>
 
+                     <div class="form-group">
+                          <label for="totalDuration">Total Duration (in seconds):</label>
+                          <input type="number" id="totalDuration" placeholder="e.g., 1800">
+                      </div>
+
                     <div class="form-actions">
                         <button type="submit" class="add-button"><i class="fas fa-save"></i> Save Video</button>
                          <button type="button" class="cancel-button" id="cancelEditBtn" style="display: none;"><i class="fas fa-times-circle"></i> Cancel Edit</button>
                     </div>
                 </form>
-            </section>
+             <p id="formMessage" class="no-videos-message" style="display: none; margin-top: 10px;"></p> </section>
 
             <section class="video-list-section">
                 <h2><i class="fas fa-list"></i> Existing Videos</h2>
@@ -88,12 +93,11 @@
                             <th>Title</th>
                             <th>Description</th>
                             <th>Module</th>
-                            <th>Actions</th>
+                            <th>Duration (s)</th> <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody id="videosTableBody">
-                        <tr><td colspan="7" class="no-videos-message">Loading videos...</td></tr>
-                    </tbody>
+                        <tr><td colspan="8" class="no-videos-message">Loading videos...</td></tr> </tbody>
                 </table>
             </section>
         </main>
@@ -107,13 +111,15 @@
             const videoTypeSelect = document.getElementById('videoType');
             const youtubeIdInput = document.getElementById('youtubeId');
             const videoTitleInput = document.getElementById('videoTitle');
-            const videoDescriptionInput = document.getElementById('videoDescription');
+            const videoDescriptionInput = documentgetElementById('videoDescription');
             const videoModuleSelect = document.getElementById('videoModule');
+            const totalDurationInput = document.getElementById('totalDuration'); // New input field
             const saveButton = videoForm.querySelector('.add-button'); // Save button
             const cancelEditBtn = document.getElementById('cancelEditBtn'); // Cancel button
             const formTitle = document.getElementById('formTitle'); // Form title element
             const videosTableBody = document.getElementById('videosTableBody'); // Table body
             const adminLogoutBtn = document.getElementById('adminLogoutBtn'); // Logout button
+             const formMessageArea = document.getElementById('formMessage'); // Message area
 
 
             // --- localStorage Key ---
@@ -132,16 +138,16 @@
 
              // --- Helper Function to Show Messages ---
              function showMessage(message, type = 'info') {
-                  // Implement a more visible message display (e.g., a div above the form)
-                 console.log(`Message (${type}):`, message);
-                 // Example (needs message element in HTML):
-                 // const msgElement = document.getElementById('adminMessageArea');
-                 // if(msgElement) {
-                 //     msgElement.textContent = message;
-                 //     msgElement.style.color = type === 'error' ? 'red' : (type === 'success' ? 'green' : 'white');
-                 //     msgElement.style.display = 'block';
-                 //     setTimeout(() => { msgElement.style.display = 'none'; }, 5000);
-                 // }
+                 formMessageArea.textContent = message;
+                 formMessageArea.style.color = type === 'success' ? 'var(--success)' : (type === 'error' ? 'var(--error)' : 'var(--text-secondary)');
+                 formMessageArea.style.display = 'block';
+
+                 // Hide message after a few seconds for non-error messages
+                 if (type !== 'error') {
+                     setTimeout(() => {
+                         formMessageArea.style.display = 'none';
+                     }, 5000); // Hide after 5 seconds
+                 }
              }
 
 
@@ -151,7 +157,7 @@
                 videosTableBody.innerHTML = ''; // Clear current table
 
                 if (videos.length === 0) {
-                    videosTableBody.innerHTML = '<tr><td colspan="7" class="no-videos-message">No videos added yet.</td></tr>';
+                    videosTableBody.innerHTML = '<tr><td colspan="8" class="no-videos-message">No videos added yet.</td></tr>'; // Updated colspan
                 } else {
                     videos.forEach(video => {
                         const row = document.createElement('tr');
@@ -162,7 +168,7 @@
                             <td data-label="Title">${video.videoTitle}</td>
                             <td data-label="Description">${video.videoDescription || '-'}</td>
                             <td data-label="Module">${video.videoModule}</td>
-                            <td data-label="Actions" class="video-actions">
+                            <td data-label="Duration (s)">${video.totalDuration !== undefined ? video.totalDuration : '-'}</td> <td data-label="Actions" class="video-actions">
                                 <button class="edit-video-btn" data-id="${video.id}"><i class="fas fa-edit"></i> Edit</button>
                                 <button class="delete-video-btn" data-id="${video.id}"><i class="fas fa-trash-alt"></i> Delete</button>
                             </td>
@@ -197,10 +203,17 @@
                 const videoTitle = videoTitleInput.value.trim();
                 const videoDescription = videoDescriptionInput.value.trim();
                 const videoModule = videoModuleSelect.value;
+                 const totalDuration = totalDurationInput.value.trim(); // Get duration
 
                 // Basic validation
                  if (!topicId || !youtubeId || !videoTitle || !videoModule) {
                      showMessage("Please fill all required fields.", 'error');
+                     return;
+                 }
+                // Validate duration is a non-negative number if entered
+                 const parsedDuration = totalDuration === '' ? undefined : parseInt(totalDuration, 10);
+                 if (totalDuration !== '' && (isNaN(parsedDuration) || parsedDuration < 0)) {
+                     showMessage("Total Duration must be a non-negative number.", 'error');
                      return;
                  }
 
@@ -210,12 +223,15 @@
                 if (id) { // Editing existing video
                     const videoIndex = videos.findIndex(v => v.id === id);
                     if (videoIndex > -1) {
-                        // Check if the updated topicId creates a duplicate unique ID
-                        const duplicateTopic = videos.find((v, index) => v.topicId === topicId && index !== videoIndex);
-                         if (duplicateTopic) {
-                              showMessage("Error: Topic ID must be unique.", 'error');
-                              return;
-                         }
+                        // Check if the updated topicId creates a duplicate unique ID (only if topicId changed)
+                        if (videos[videoIndex].topicId !== topicId) {
+                             const duplicateTopic = videos.find(v => v.topicId === topicId);
+                              if (duplicateTopic) {
+                                   showMessage("Error: Topic ID must be unique.", 'error');
+                                   return;
+                              }
+                        }
+
 
                         videos[videoIndex] = {
                             id: id, // Keep the original ID
@@ -224,7 +240,8 @@
                             youtubeId: youtubeId,
                             videoTitle: videoTitle,
                             videoDescription: videoDescription,
-                            videoModule: videoModule
+                            videoModule: videoModule,
+                            totalDuration: parsedDuration // Save parsed duration
                         };
                         showMessage("Video updated successfully!", 'success');
                     } else {
@@ -245,7 +262,8 @@
                         youtubeId: youtubeId,
                         videoTitle: videoTitle,
                         videoDescription: videoDescription,
-                        videoModule: videoModule
+                        videoModule: videoModule,
+                         totalDuration: parsedDuration // Save parsed duration
                     };
                     videos.push(newVideo);
                     showMessage("Video added successfully!", 'success');
@@ -273,6 +291,7 @@
                     videoTitleInput.value = videoToEdit.videoTitle;
                     videoDescriptionInput.value = videoToEdit.videoDescription;
                     videoModuleSelect.value = videoToEdit.videoModule;
+                     totalDurationInput.value = videoToEdit.totalDuration !== undefined ? videoToEdit.totalDuration : ''; // Populate duration
 
                     // Change form title and button text
                     formTitle.innerHTML = '<i class="fas fa-edit"></i> Edit Video';
@@ -280,7 +299,8 @@
                     cancelEditBtn.style.display = 'inline-block'; // Show cancel button
 
                     // Disable editing Topic ID while editing to maintain uniqueness constraint easily
-                    topicIdInput.disabled = true;
+                    // Unless you want to allow changing it and handle cascading updates (complex)
+                     topicIdInput.disabled = true;
 
                      showMessage("Editing video...", 'info');
 
@@ -296,7 +316,7 @@
 
             // --- Handle Delete Button Click ---
             function handleDeleteVideo() {
-                if (confirm('Are you sure you want to delete this video entry?')) {
+                if (confirm('Are you sure you want to delete this video entry? This cannot be undone.')) { // Added warning
                     const videoIdToDelete = this.getAttribute('data-id');
                     let videos = loadVideos();
 
@@ -307,6 +327,13 @@
                     renderVideoTable(); // Re-render the table
                     showMessage("Video deleted successfully!", 'success');
                      resetForm(); // Reset form in case the deleted item was being edited
+
+                     // --- Important: Also remove associated user progress and notes! ---
+                     // This is crucial for data consistency. Iterate through all users' progress and notes.
+                     // In a real app, the backend would handle this database-level deletion.
+                     console.warn("Frontend Delete: Remember to also delete associated user progress and notes for this video ID in a real application.");
+                     // You would need to iterate through localStorage keys for progress (uknoClubProgress-*)
+                     // and notes (video-notes-*) and remove entries related to videoIdToDelete's topicId.
                 }
             }
 
@@ -320,6 +347,7 @@
                 cancelEditBtn.style.display = 'none'; // Hide cancel button
                 topicIdInput.disabled = false; // Re-enable topic ID field
                  showMessage("", 'info'); // Clear message area
+                 formMessageArea.style.display = 'none'; // Ensure message area is hidden on reset
             }
 
              // --- Handle Admin Logout ---
